# ppg-core

./: .gitignore  CMakeLists.txt  README.md  WfcGeneratorUnitTests.cpp  build_debug.sh  buildandrun_tests.sh  buildtests.sh  clean.sh  create_includes.sh  create_includes_debug.sh  makelib.sh  ppg-core.lua  premake5.lua
example/: example.cpp
includes/ppg-core/: PuzzGen.h  PuzzleGenerator.h  PuzzleRelation.h  ppg-core.lib
src/: CMakeLists.txt  Context.h  Core.h  DefaultGenerator.cpp  DefaultGenerator.h  Event.h  EventManager.h  Generator.cpp  Generator.h  GeneratorHelper.cpp  GeneratorHelper.h  GraphNode.cpp  GraphNode.h  IPuzzleObjectMetaData.cpp  IPuzzleObjectMetaData.h  Logger.cpp  Logger.h  Node.cpp  Node.h  Object.cpp  Object.h  ObjectMetaData.h  PUZZGEN_TYPES.h  PuzzGen.cpp  PuzzGen.h  PuzzGenCore.h  Puzzle.cpp  Puzzle.h  PuzzleEvent.cpp  PuzzleEvent.h  PuzzleEventManager.cpp  PuzzleEventManager.h  PuzzleGenerator.cpp  PuzzleGenerator.h  PuzzleGeneratorHelper.cpp  PuzzleGeneratorHelper.h  PuzzleGraph.cpp  PuzzleGraphNode.cpp  PuzzleGraphNode.h  PuzzleLogger.cpp  (+27 more)
src/core/: Core.h  EventManager.h  Generator.h  GeneratorHelper.cpp  GeneratorHelper.h  GraphNode.cpp  GraphNode.h  Logger.cpp  Node.cpp  Node.h  Randomizer.cpp  Randomizer.h  Relation.cpp  Relation.h  WfcMat.h
test/: CMakeLists.txt  GeneralTest.cpp  GeneratorUnitTests.cpp
