cmake_minimum_required (VERSION 3.4)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
SET (CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR})
option(BUILD_SHARED_LIBS "Build shared library" OFF)
if (${BUILD_SHARED_LIBS})
	SET (CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
endif()
project (ppg-core)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/build_results/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/build_results/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/build_results/bin)

add_subdirectory(src)
add_subdirectory(test)
enable_testing ()
add_test(Name GeneralTest COMMAND test)
